# craft-harness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.ja.md  README.ko.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  SUPPORT.md  craft  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Formula/: craft-harness.rb
adapters/: AGENTS.md  CLAUDE.md  GEMINI.md  OPENCODE.md  OPENHANDS.md
agents/🎨 디자인/: figma-flutter-agent.md
agents/💻 개발/: build-resolver-agent.md  deadcode-cleaner-agent.md  fastapi-agent.md  flutter-to-nextjs.md  live-qa-agent.md  loop-monitor-agent.md
agents/🔍 리뷰/: review-architecture.md  review-code.md  review-content.md  review-design.md  review-orchestrator.md  review-security.md
commands/: audit.md  commit.md  orchestrate.md  review.md  skill-audit.md  tdd.md  team.md  test-coverage.md  verify.md
contexts/: dev.md  plan.md  research.md  review.md
docs/: architecture.md  install.md  oss-launch-checklist.md  output-styles.md  release.md  skill-catalog.md  spec-contract.md
examples/: plan.json
output-styles/: concise-engineer.md  executive-summary.md  qa-report.md  research-brief.md
schemas/: plan-v2.schema.json
scripts/: check-markdown-links.py  install.sh  orchestrate-worktrees.py  sprint-reset-loop.sh  validate-plan.py
skills/autonomous-loops/: SKILL.md
skills/design-harness/: SKILL.md
templates/: figma-to-prod.toml  fullstack-dev.toml  multi-reviewer.toml
(+267 files in other folders)
